--- a/src/main/resources/static/write.html
+++ b/src/main/resources/static/write.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>글쓰기</title>
     <style>
         * {
             margin: 0;
@@ -13,42 +15,20 @@
         }
 
         body {
-            height: 100vh;
+            min-height: 100vh;
             width: 100%;
             background: linear-gradient(115deg, #56d8e4 10%, #9f01ea 90%);
-        }
-
-        .show-btn {
-            background: #fff;
-            padding: 10px 20px;
-            font-size: 20px;
-            font-weight: 500;
-            color: #3498db;
-            cursor: pointer;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .show-btn,
-        .container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        input[type="checkbox"] {
-            display: none;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .container {
             background: #fff;
-            width: 410px;
-            padding: 30px;
-            box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-        }
-
-        #show:checked~.container {
-            display: block;
+            width: 500px;
+            padding: 40px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
         }
 
         .container .close-btn {
@@ -59,81 +39,66 @@
             cursor: pointer;
         }
 
-        .container .close-btn:hover {
-            color: #3498db;
-        }
-
         .container .text {
             font-size: 35px;
             font-weight: 600;
             text-align: center;
-        }
-
-        .container form {
-            margin-top: -20px;
+            margin-bottom: 20px;
         }
 
         .container form .data {
-            height: 45px;
-            width: 100%;
-            margin: 40px 0;
+            margin-bottom: 20px;
         }
 
-        form .data label {
+        .container form .data label {
             font-size: 18px;
+            margin-bottom: 5px;
+            display: block;
         }
 
-        form .data input {
-            height: 100%;
+        .container form .data input,
+        .container form .data textarea {
             width: 100%;
-            padding-left: 10px;
-            font-size: 17px;
+            padding: 10px;
+            font-size: 16px;
             border: 1px solid silver;
+            border-radius: 5px;
         }
 
-        form .data input:focus {
+        .container form .data input:focus,
+        .container form .data textarea:focus {
             border-color: #3498db;
             border-bottom-width: 2px;
         }
 
-        form .forgot-pass {
-            margin-top: -8px;
+        .container form .data textarea {
+            resize: none;
+            height: 150px;
         }
 
-        form .forgot-pass a {
-            color: #3498db;
-            text-decoration: none;
-        }
-
-        form .forgot-pass a:hover {
-            text-decoration: underline;
-        }
-
-        form .btn {
-            margin: 30px 0;
-            height: 45px;
-            width: 100%;
+        .container form .btn {
+            margin-top: 20px;
             position: relative;
             overflow: hidden;
         }
 
-        form .btn .inner {
+        .container form .btn .inner {
             height: 100%;
             width: 300%;
             position: absolute;
             left: -100%;
             z-index: -1;
-            background: -webkit-linear-gradient(right, #56d8e4, #9f01ea, #56d8e4, #9f01ea);
+            background: linear-gradient(right, #56d8e4, #9f01ea, #56d8e4, #9f01ea);
             transition: all 0.4s;
         }
 
-        form .btn:hover .inner {
+        .container form .btn:hover .inner {
             left: 0;
         }
 
-        form .btn button {
-            height: 100%;
+        .container form .btn button {
             width: 100%;
+            padding: 10px;
             background: none;
             border: none;
             color: #fff;
@@ -142,99 +107,30 @@
             text-transform: uppercase;
             letter-spacing: 1px;
             cursor: pointer;
-        }
-
-        form .signup-link {
-            text-align: center;
-        }
-
-        form .signup-link a {
-            color: #3498db;
-            text-decoration: none;
-        }
-
-        form .signup-link a:hover {
-            text-decoration: underline;
+            background: linear-gradient(115deg, #56d8e4 10%, #9f01ea 90%);
+            border-radius: 5px;
         }
     </style>
 </head>
 
 <body>
-    <!DOCTYPE html>
-    <!-- Created By CodingNepal -->
-    <html lang="en" dir="ltr">
-
-    <head>
-        <meta charset="utf-8">
-        <!-- <title>Popup Login Form Design | CodingNepal</title> -->
-    </head>
-
-    <body>
-        <div class="center">
-            <div class="container">
-                <label for="show" class="close-btn fas fa-times" title="close"></label>
-                <div class="text">
-                    글쓰기</div>
-                <form action="/write" method="post">
-                    <div class="data">
-                        <label>Board_Title</label>
-                        <input type="text" placeholder="Enter Board_Title" name="Board_Title" required>
-                    </div>
-                    <div class="data">
-                        <label>Board_Content</label>
-                        <input type="text" placeholder="Enter Board_Content" name="Board_Content" required>
-                    </div>
-                    <br>
-                    <div class="btn">
-                        <div class="inner">
-                        </div>
-                        <button type="submit">write</button>
-                    </div>
-
-                </form>
+    <div class="container">
+        <div class="text">글쓰기</div>
+        <form action="/write" method="post">
+            <div class="data">
+                <label for="title">제목</label>
+                <input type="text" id="title" name="Board_Title" placeholder="제목을 입력하세요" required>
             </div>
-        </div>
-    </body>
-
-    </html>
-
+            <div class="data">
+                <label for="content">내용</label>
+                <textarea id="content" name="Board_Content" placeholder="내용을 입력하세요" required></textarea>
+            </div>
+            <div class="btn">
+                <div class="inner"></div>
+                <button type="submit">작성하기</button>
+            </div>
+        </form>
+    </div>
 </body>
 
 </html>
-<!-- <script>
-	var currentTime = new Date();
-	
-	var year = currentTime.getFullYear();
-	var month = ('0' + (currentTime.getMonth() + 1)).slice(-2);
-	var day = ('0' + currentTime.getDate()).slice(-2);
-
-	var dateString = year + '-' + month + '-' + day;
-
-	var hours = ('0' + currentTime.getHours()).slice(-2);
-	var minutes = ('0' + currentTime.getMinutes()).slice(-2);
-	var seconds = ('0' + currentTime.getSeconds()).slice(-2);
-
-	var timeString = hours + ':' + minutes + ':' + seconds;
-
-	document.getElementById("date").value = dateString + " " + timeString;
-</script> -->
-<!-- 
-<body>
-    <form action="/register" method="post">
-        <div class="container">
-            <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="User_Name" required>
-
-            <label for="psw"><b>Password</b></label>
-            <input type="text" placeholder="Enter Userpass" name="User_Pass" required>
-
-			<div class="btn">
-				<div class="inner">
-	</div>
-	<button type="submit">SignUp</button>
-			  </div>
-        </div>
-    </form>
-</body>
-
-</html> -->
